# langchain-llama-stack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_simple.py
.github/actions/poetry_setup/: action.yml
.github/actions/setup/: action.yml
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _all_ci.yml  _codespell.yml  _compile_integration_test.yml  _lint.yml  _release.yml  _scheduled_test.yml  _test.yml  _test_release.yml  check_diffs.yml  python-publish.yml
docs/: chat.ipynb  demo_safety.py  demo_safety_moderation_hooks.py  document_loaders.ipynb  llms.ipynb  provider.ipynb  retrievers.ipynb  safety_demos_remote.ipynb  stores.ipynb  text_embedding.ipynb  toolkits.ipynb  tools.ipynb  vectorstores.ipynb
langchain_llama_stack/: __init__.py  _utils.py  chat_models.py  document_loaders.py  embeddings.py  input_output_safety_moderation_hooks.py  retrievers.py  safety.py  toolkits.py  tools.py  vectorstores.py
langchain_llamastack/: __init__.py  input_output_safety_moderation_hooks.py
tests/integration_tests/: test_chat_models.py  test_compile.py  test_embeddings.py  test_retrievers.py  test_safety.py  test_tools.py  test_vectorstores.py
tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_input_output_safety_moderation_hooks.py  test_safety.py  test_tools.py
tests/unit_tests/__snapshots__/: test_chat_models.ambr
