[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-llama-stack"
version = "0.1.0"
description = "An integration package connecting LlamaStack and LangChain"
authors = []
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "langchain-core>=0.3.47",
    "llama-stack-client>=0.1.8",
]

[project.urls]
"Source Code" = "https://github.com/mattf/langchain-llama-stack"
"Release Notes" = "https://github.com/mattf/langchain-llama-stack/releases"

[dependency-groups]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4",
    "langchain-tests>=0.3.16",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
]
test_integration = [
    { include-group = "test" },
]
codespell = [
    "codespell>=2.2.6",
]
lint = [
    "ruff>=0.5",
]
typing = [
    "mypy>=1.10",
]
dev = [
    { include-group = "test" },
    { include-group = "codespell" },
    { include-group = "lint" },
    { include-group = "typing" },
]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.ruff]
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
